--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 VITE_TMDB_API_URL=https://api.themoviedb.org/3/
 VITE_TMDB_IMG_BASE_URL=https://image.tmdb.org/t/p/
-VITE_API_KEY=
+VITE_API_KEY=7f974db853a5471f9aefc01881cff484
